# RMBDQD

./: como_utilizar.html  como_utilizar.md
RMBDQD/: CMakeLists.txt  INSTALL.sh
RMBDQD/scripts/: limparPorcentagens  organizarAWK.sh  plot.py  python_control.py
RMBDQD/src/: CMakeLists.txt  main.f90
RMBDQD/src/mod/: commonutils.f90  decomp.f90  f90getopt.f90  frequencia.f90  get_os.cpp  help.f90  jacobi.f90  mult.f90  redbak.f90  scheck.f90  subrotinas.f90  subspace.f90
RMBDQD/utils/: ANSYS2DAT.cpp  Makefile  convert_dat_to_vtk.cpp  makeDATfile.cpp
